--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               href="#contact">Contact</a></li>
         </ul><button id="navAction"
           class="px-8 py-4 mx-auto mt-4 font-bold text-blue-900 transition duration-300 ease-in-out transform bg-white rounded-full shadow opacity-75 lg:mx-0 hover:underline lg:mt-0 focus:outline-none focus:shadow-outline hover:scale-105"><a
-            href="">Free Growth Strategy Call</a></button>
+            href="https://calendly.com/halaldigital/discovery-call">Free Growth Strategy Call</a></button>
       </div>
     </div>
     <hr class="py-0 my-0 border-b border-gray-100 opacity-25">
@@ -70,7 +70,7 @@
           time & money on ineffective ad campaigns.</p>
         <button
           class="px-8 py-4 mx-auto my-6 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow-lg lg:mx-0 hover:underline focus:outline-none focus:shadow-outline hover:scale-105">
-          <a href="" class="cursor-pointer" style="font-size: larger;"></a>Free Growth Strategy Call</button>
+          <a href="https://calendly.com/halaldigital/discovery-call" class="cursor-pointer" style="font-size: larger;"></a>Free Growth Strategy Call</button>
       </div>
       <div class="w-full py-6 text-center md:w-2/5">
         <img class="z-50 w-full md:w-4/5" src="images/imghero.png">
@@ -428,7 +428,7 @@
           class="font-bold">hi@halaldigital.info</span></a></h3>
     <button
       class="px-8 py-4 mx-auto my-6 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow-lg lg:mx-0 hover:underline focus:outline-none focus:shadow-outline hover:scale-105">
-      <a href="" class="cursor-pointer" style="font-size: larger;">Free Growth Strategy Call</a></button>
+      <a href="https://calendly.com/halaldigital/discovery-call" class="cursor-pointer" style="font-size: larger;">Free Growth Strategy Call</a></button>
 
     <!--Footer-->
     <footer class="pt-5">
