--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
           Paid Advertising.</h1>
         <p class="mb-8 text-2xl leading-normal">Don't leave money on the table by not running paid ads, and Stop wasting
           time & money on ineffective ad campaigns.</p>
-        <button
+<!--         <button
           class="px-8 py-4 mx-auto my-6 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow-lg lg:mx-0 hover:underline focus:outline-none focus:shadow-outline hover:scale-105">
-          <a href="https://calendly.com/halaldigital/discovery-call" class="cursor-pointer" style="font-size: larger;"></a>Free Growth Strategy Call</button>
+          <a href="https://calendly.com/halaldigital/discovery-call" class="cursor-pointer" style="font-size: larger;"></a>Free Growth Strategy Call</button> -->
+        <button id="navAction"
+          class="px-8 py-4 mx-auto mt-4 font-bold text-blue-900 transition duration-300 ease-in-out transform bg-white rounded-full shadow opacity-75 lg:mx-0 hover:underline lg:mt-0 focus:outline-none focus:shadow-outline hover:scale-105"><a
+            href="https://calendly.com/halaldigital/discovery-call">Free Growth Strategy Call</a></button>
       </div>
       <div class="w-full py-6 text-center md:w-2/5">
         <img class="z-50 w-full md:w-4/5" src="images/imghero.png">
