--- a/thank-you-meetingcall.html
+++ b/thank-you-meetingcall.html
@@ -41,25 +41,12 @@
       <div
         class="z-20 flex-grow hidden w-full p-4 mt-2 text-black bg-white lg:flex lg:items-center lg:w-auto lg:mt-0 lg:bg-transparent lg:p-0"
         id="nav-content">
-        <ul class="items-center justify-end flex-1 list-reset lg:flex">
-          <li class="mr-3"><a
-              class="inline-block px-3 py-2 text-black no-underline hover:text-blue-900 hover:text-underline lg:text-2xl"
-              href="#services">Services</a></li>
-          <li class="mr-3"><a
-              class="inline-block px-3 py-2 text-black no-underline hover:text-blue-900 hover:text-underline lg:text-2xl"
-              href="#about">About</a></li>
-          <li class="mr-3"><a
-              class="inline-block px-3 py-2 text-black no-underline hover:text-blue-900 hover:text-underline lg:text-2xl"
-              href="#contact">Contact</a></li>
-        </ul><button id="navAction"
-          class="px-8 py-4 mx-auto mt-4 font-bold text-blue-900 transition duration-300 ease-in-out transform bg-white rounded-full shadow opacity-75 lg:mx-0 hover:underline lg:mt-0 focus:outline-none focus:shadow-outline hover:scale-105"><a
-            href="https://calendly.com/halaldigital/discovery-call">Free Growth Strategy Call</a></button>
       </div>
     </div>
     <hr class="py-0 my-0 border-b border-gray-100 opacity-25">
   </nav>
   
-  <h1>
+  <h1 class="flex text-center">
     Thank you for Booking A call With our team
   </h1>
 
