--- a/thank-you-meetingcall.html
+++ b/thank-you-meetingcall.html
@@ -1,139 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>
-    Halal | Digital Marketing Agency
-  </title>
-  <meta name="description"
-    content="Halal is a digital marketing agency helping SMBs to Grow, get more clients and make more sales through paid traffic and sales funnels. our services include: Paid Ads, Social Media Marketing, and Email Marketing." />
-  <meta name="keywords"
-    content="Halal Halal-digital digital marketing agency ecommerce realestate social-media-agency paid-ads Facebook-ads tiktok-ads google-ads linkedin-ads online-store" />
-  <meta name="author" content="Mohamed Ali" />
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
-  <!--Replace with your tailwind.css once created-->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
-  <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
-  <style>
-    .gradient {
-      background: linear-gradient(90deg, #17e25b 0, #93e491 100%)
-    }
-  </style>
-</head>
-
-<body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
-
-  <!--Nav-->
-  <nav id="header" class="fixed top-0 z-30 w-full text-white">
-    <div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
-      <div class="flex items-center pl-4"><a
-          class="text-2xl font-bold text-white no-underline toggleColour hover:no-underline lg:text-4xl"
-          href="halaaldigital.com">Halal Digital</a></div>
-      <div class="block pr-4 lg:hidden"><button id="nav-toggle"
-          class="flex items-center p-1 text-pink-800 transition duration-300 ease-in-out transform hover:text-gray-900 focus:outline-none focus:shadow-outline hover:scale-105"><svg
-            class="w-6 h-6 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <title>Menu</title>
-            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-          </svg></button></div>
-      <div
-        class="z-20 flex-grow hidden w-full p-4 mt-2 text-black bg-white lg:flex lg:items-center lg:w-auto lg:mt-0 lg:bg-transparent lg:p-0"
-        id="nav-content">
-      </div>
-    </div>
-    <hr class="py-0 my-0 border-b border-gray-100 opacity-25">
-  </nav>
-  
-  <h1 class="flex text-center">
-    Thank you for Booking A call With our team
-  </h1>
-
-  <!-- jQuery if you need it
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  -->
-  <script>
-    var scrollpos = window.scrollY;
-    var header = document.getElementById("header");
-    var navcontent = document.getElementById("nav-content");
-    var navaction = document.getElementById("navAction");
-    var brandname = document.getElementById("brandname");
-    var toToggle = document.querySelectorAll(".toggleColour");
-
-    document.addEventListener("scroll", function () {
-      /*Apply classes for slide in bar*/
-      scrollpos = window.scrollY;
-
-      if (scrollpos > 10) {
-        header.classList.add("bg-white");
-        navaction.classList.remove("bg-white");
-        navaction.classList.add("gradient");
-        navaction.classList.remove("text-gray-800");
-        navaction.classList.add("text-white");
-        //Use to switch toggleColour colours
-        for (var i = 0; i < toToggle.length; i++) {
-          toToggle[i].classList.add("text-gray-800");
-          toToggle[i].classList.remove("text-white");
-        }
-        header.classList.add("shadow");
-        navcontent.classList.remove("bg-gray-100");
-        navcontent.classList.add("bg-white");
-      } else {
-        header.classList.remove("bg-white");
-        navaction.classList.remove("gradient");
-        navaction.classList.add("bg-white");
-        navaction.classList.remove("text-white");
-        navaction.classList.add("text-gray-800");
-        //Use to switch toggleColour colours
-        for (var i = 0; i < toToggle.length; i++) {
-          toToggle[i].classList.add("text-white");
-          toToggle[i].classList.remove("text-gray-800");
-        }
-
-        header.classList.remove("shadow");
-        navcontent.classList.remove("bg-white");
-        navcontent.classList.add("bg-gray-100");
-      }
-    });
-  </script>
-  <script>
-    /*Toggle dropdown list*/
-    /*https://gist.github.com/slavapas/593e8e50cf4cc16ac972afcbad4f70c8*/
-
-    var navMenuDiv = document.getElementById("nav-content");
-    var navMenu = document.getElementById("nav-toggle");
-
-    document.onclick = check;
-    function check(e) {
-      var target = (e && e.target) || (event && event.srcElement);
-
-      //Nav Menu
-      if (!checkParent(target, navMenuDiv)) {
-        // click NOT on the menu
-        if (checkParent(target, navMenu)) {
-          // click on the link
-          if (navMenuDiv.classList.contains("hidden")) {
-            navMenuDiv.classList.remove("hidden");
-          } else {
-            navMenuDiv.classList.add("hidden");
-          }
-        } else {
-          // click both outside link and outside menu, hide menu
-          navMenuDiv.classList.add("hidden");
-        }
-      }
-    }
-    function checkParent(t, elm) {
-      while (t.parentNode) {
-        if (t == elm) {
-          return true;
-        }
-        t = t.parentNode;
-      }
-      return false;
-    }
-  </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Halal | Thank you</title><meta name="description" content="Halal is a digital marketing agency helping SMBs to Grow, get more clients and make more sales through paid traffic and sales funnels. our services include: Paid Ads, Social Media Marketing, and Email Marketing."><meta name="keywords" content="Halal Halal-digital digital marketing agency ecommerce realestate social-media-agency paid-ads Facebook-ads tiktok-ads google-ads linkedin-ads online-store"><meta name="author" content="Mohamed Ali"><link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"><!--Replace with your tailwind.css once created--><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet"><!-- Define your gradient here - use online tools to find a gradient matching your branding--><style>.gradient{background:linear-gradient(90deg,#15ee5e 0,#61d85f 100%)}</style></head><body class="leading-normal tracking-normal text-white gradient" style="font-family:'Source Sans Pro',sans-serif"><!--Nav--><nav id="header" class="fixed top-0 z-30 w-full text-white"><div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0"><div class="flex items-center text-center mx-auto pl-4"><a class="text-4xl font-bold text-white no-underline toggleColour hover:no-underline lg:text-4xl" href="halaaldigital.com">Halal Digital</a></div></div></nav><div style="display:grid;grid-template-columns:1fr;grid-template-rows:100vh;align-items:center;justify-content:center;text-align:center"><h1 class="text-5xl md: text-3xl text-white">Thank you for Booking A call With Us</h1></div></body></html>
