--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         background: linear-gradient(90deg, #17e25b 0, #93e491 100%);
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMHJYP2DPT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EMHJYP2DPT');
+</script>
     <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
